--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -118,16 +118,21 @@ jobs:
         run: |
           TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
           COMMIT_ID=$(git rev-parse HEAD)
-          IMAGE_TAG="prod-${TIMESTAMP}-${COMMIT_ID}"
+          # Extract commit message and make it safe for use in tags
+          COMMIT_MSG=$(git log -1 --pretty=%B | tr -d '\n' | cut -c1-50)
+          SAFE_COMMIT_MSG=$(echo "$COMMIT_MSG" | sed -e 's/[^a-zA-Z0-9]/_/g' | cut -c1-30)
+          IMAGE_TAG="prod-${SAFE_COMMIT_MSG}-${TIMESTAMP}-${COMMIT_ID:0:7}"
           
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "REPO_COMMIT_SHA=$COMMIT_ID" >> $GITHUB_ENV
+          echo "COMMIT_MESSAGE=$COMMIT_MSG" >> $GITHUB_ENV
           echo "Generated Image Tag: $IMAGE_TAG"
 
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ env.REPO_COMMIT_SHA }}
           restore-keys: |
             ${{ runner.os }}-buildx-
   
@@ -142,6 +147,11 @@ jobs:
             ENV_FILE=.env
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
+          no-cache: false
+          pull: true
+          labels: |
+            org.opencontainers.image.revision=${{ env.REPO_COMMIT_SHA }}
+            org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
   
       - name: Move cache directory
         run: |
@@ -213,7 +223,7 @@ jobs:
           git config --local user.email "hariharen@greatify.ai"
           git config --local user.name "Hariharen"
           git add k8s/overlays/prod/kustomization.yaml
-          git commit -m "Update image tags for prod deployment"
+          git commit -m "Update image tags for prod deployment - ${{ env.COMMIT_MESSAGE }}"
           git push origin main
           
       # - name: Push to protected branch
@@ -251,7 +261,8 @@ jobs:
           username: ExamX-V2-CICD
           text: |
             :rocket: *Frontend deployment to production environment succeeded*         
-            *Pusher:* `${{ github.actor }}`   
+            *Pusher:* `${{ github.actor }}`
+            *Commit:* `${{ env.COMMIT_MESSAGE }}`   
             The changes have been successfully deployed to the Production environment. Please verify the deployment and conduct necessary tests.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
